personal-website/src/components/HomePage/HomePage.css
.all-homepage {
	margin-bottom: 2rem;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.mobile-top-section,
.nontyped-title {
	display: none;
}

.desktop-top-section {
	display: flex;
	gap: 5rem;
	background-color: var(--light-section-background);
	color: var(--light-section-text);
	align-items: center;
	padding: 4rem var(--desktop-homepage-padding);
	padding-right: 8rem;
}

.desktop-top-section .homepage-top {
	max-width: 65%;
}

.homepage-title {
	margin-top: 5px;
	margin-bottom: 3rem;
}

.homePageText {
	line-height: 1.75;
	margin-bottom: 64px;
	margin-top: 1rem;
}

.no-margin-bottom-text {
	margin-bottom: 0px;
}

.zane-image {
	width: 26%;
	min-width: 150px;
	max-height: 400px;
	transform: rotate(2deg);
	object-fit: cover;
}

.quicklinks {
	display: flex;
	gap: 15px;
	align-items: center;
}

.quicklinks > a {
	color: var(--quicklinks-text-color);
	background-color: var(--royal-blue);
	border: 2px solid var(--royal-blue);
	min-width: max-content;
	padding: 10px 15px;
	border-radius: 30px;
	font-weight: 600;
	text-align: center;
	transition: ease-in-out 0.3s;
}

.quicklinks > a:hover {
	color: var(--royal-blue);
	border: 2px solid var(--royal-blue);
	background-color: unset;
}

.quicklink-title {
	font-weight: 700;
	font-size: 0.8rem;
	margin-bottom: 10px;
	padding-bottom: 2px;
	width: fit-content;
	letter-spacing: 1px;
	opacity: 0.8;
	padding-left: 8px;
}

/* BCR Section */

.bcr-homepage {
	display: flex;
	gap: 3rem;
	padding: var(--desktop-homepage-padding);
	padding-top: 4rem;
	align-items: center;
	color: var(--primary-text);
	justify-content: space-between;
}

.bcr-image {
	width: 50%;
	object-fit: cover;
}

.tag {
	background-color: var(--tag-background);
	border-radius: 5px;
	padding: 8px 10px;
}

.bcr-homepage .small-text {
	max-width: unset;
}

.bcr-aboutme-text {
	width: 45%;
}

.bcr-screenshot-div {
	width: 60%;
}

.bcr-screenshot {
	width: 100%;
}

/* BCR Timeline Section */
.bcr-timeline-div {
	background-color: var(--royal-blue);
	padding: var(--desktop-homepage-padding);
}

.bcr-timeline {
    list-style-type: none;
	padding: 0px;
	display: flex;
	gap: 40px;
	margin-bottom: 0px;
}

.timeline-left {
	width: 47%;
}

.timeline-right {
	width: 53%;
}

.bcr-timeline-images {
	margin-top: 4rem;
	display: flex;
	gap: 2rem;
	padding-inline: var(--desktop-homepage-padding);
	width: calc(100% - (2 * var(--desktop-homepage-padding)));
	justify-content: center;
}

.bcr-images-left,
.bcr-images-right {
	display: flex;
	flex-direction: column;
}

.bcr-images-left {
	width: 65%;
	gap: 3rem;
}

.bcr-images-right {
	width: 16%;
	gap: 1rem;
}

.bcr-mobile-homepage-image,
.bcr-mobile-stats-image,
.bcr-mobile-profile-image {
	border-radius: 10px;
}

.bcr-timeline-item {
	position: relative;
	padding: 0 0 15px 20px;
	border-left: 5px solid var(--primary-text);
}

.bcr-images-right {
	display: flex;
	justify-content: flex-start;
}

/* Bullet points */
.bcr-timeline-item::before {
	content: "";
    position: absolute;
    width: 15px;
    height: 15px;
    top: -1px;
    left: -10px;
    background-color: var(--primary-text);
    border-radius: 50%;
}

.bcr-timeline-item:last-child {
	border-left: 5px solid rgb(0, 89, 214);
	padding-bottom: 0px;
}

.bcr-timeline-item:last-child .bcr-timeline-text {
	margin-bottom: 0px;
}

.bcr-timeline-title {
	margin-block: 0px 10px;
	line-height: 1rem;
}

.bcr-timeline-text {
	line-height: 1.5;
	margin-block: 10px;
}

